# QSPM

./: CMakeLists.txt  QSPM.cpp  QSPM.h
.github/workflows/: cmake-multi-platform.yml  msvc.yml
include/: database.h  database.hpp  log.h  log.hpp  main.hpp
src/: QSPM.h  database.cpp  log.cpp  main.cpp
